code-server and extension update

--- a/arduino/Dockerfile
+++ b/arduino/Dockerfile
@@ -11,14 +11,15 @@ RUN pacman -S --noconfirm \
 USER dev
 WORKDIR /home/dev
 
-ENV EXT_VER=0.4.12
-ENV EXT_HASH=235a13f7257218d786f731e5f460189364d93c713a6d9c6ece39ffdf3ada3344
+ENV EXT_VER=0.6.230727001
+ENV EXT_HASH=d49f0640d18fae6efc9b52fda6370092f404cf0540137968841b8bca1f83df87
 ENV EXT_VENDOR=vsciot-vscode
 ENV EXT_NAME=vscode-arduino
-RUN curl -L --compressed -o ext.vsix \
-    "$EXT_BASE_URL/$EXT_VENDOR/vsextensions/$EXT_NAME/$EXT_VER/vspackage" &&\
-  echo "$EXT_HASH  ext.vsix" | sha256sum -c - &&\
-  code --install-extension ext.vsix &&\
+#RUN curl -L --compressed -o ext.vsix \
+#    "$EXT_BASE_URL/$EXT_VENDOR/vsextensions/$EXT_NAME/$EXT_VER/vspackage" &&\
+COPY $EXT_VENDOR.$EXT_NAME-$EXT_VER@linux-x64.vsix ext.vsix
+RUN echo "$EXT_HASH  ext.vsix" | sha256sum -c - &&\
+  code-server --install-extension ext.vsix &&\
   rm ext.vsix
 
 ENV ESP_INDEX=package_esp32_index.json
