--- a/jc/Dockerfile
+++ b/jc/Dockerfile
@@ -1,16 +1,11 @@
 FROM python:3.11-slim-bookworm
 
-ARG UID=3360
-RUN groupadd -g $UID appuser
-RUN useradd -m -u $UID -g appuser appuser
-
-USER appuser
-WORKDIR /home/appuser
-ENV PATH "/home/appuser/.local/bin:${PATH}"
+RUN groupadd -g 17105 appuser
+RUN useradd -m -u 17105 -g appuser appuser
 
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir --require-hashes \
-  -r requirements.txt
-RUN rm requirements.txt
+RUN chown -R appuser:appuser /usr/local &&\
+  su appuser -c 'pip install --no-cache-dir --require-hashes -r /requirements.txt' &&\
+  chown -R root:root /usr/local
 
 ENTRYPOINT ["jc"]
