--- a/json2yaml/Dockerfile
+++ b/json2yaml/Dockerfile
@@ -1,17 +1,13 @@
 FROM python:3.11-slim-bookworm
 
-RUN groupadd -g 1000 appuser
-RUN useradd -m -u 1000 -g appuser appuser
-
-USER appuser
-ENV PATH "/home/appuser/.local/bin:${PATH}"
-WORKDIR /home/appuser
+RUN groupadd -g 16806 appuser
+RUN useradd -m -u 16806 -g appuser appuser
 
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir --require-hashes \
-  -r requirements.txt
-RUN rm requirements.txt
+RUN chown -R appuser:appuser /usr/local &&\
+  su appuser -c 'pip install --no-cache-dir --require-hashes -r /requirements.txt' &&\
+  chown -R root:root /usr/local
 
-COPY ./json2yaml ./yaml2json /home/appuser/.local/bin/
+COPY ./json2yaml ./yaml2json /usr/local/bin/
 
 ENTRYPOINT ["json2yaml"]
