--- a/ncdu/Dockerfile
+++ b/ncdu/Dockerfile
@@ -1,13 +1,7 @@
 FROM debian:bookworm-slim
 
-RUN groupadd -g 1000 appuser
-RUN useradd -m -u 1000 -g appuser appuser
-
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends ncdu \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ncdu \
   && rm -rf /var/lib/apt/lists/*
 
-USER appuser
-WORKDIR /home/appuser
-
-ENTRYPOINT ["ncdu", "workdir"]
+ENTRYPOINT ["ncdu"]
