--- a/kasa/Dockerfile
+++ b/kasa/Dockerfile
@@ -1,15 +1,11 @@
 FROM python:3.11-slim-bookworm
 
-RUN groupadd -g 1000 appuser
-RUN useradd -m -u 1000 -g appuser appuser
-
-USER appuser
-ENV PATH "/home/appuser/.local/bin:${PATH}"
-WORKDIR /home/appuser
+RUN groupadd -g 14609 appuser
+RUN useradd -m -u 14609 -g appuser appuser
 
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir --require-hashes \
-  -r requirements.txt
-RUN rm requirements.txt
+RUN chown -R appuser:appuser /usr/local &&\
+  su appuser -c 'pip install --no-cache-dir --require-hashes -r /requirements.txt' &&\
+  chown -R root:root /usr/local
 
 ENTRYPOINT ["kasa"]
