--- a/archlinux-colin/Dockerfile
+++ b/archlinux-colin/Dockerfile
@@ -1,7 +1,7 @@
-FROM archlinux:base-devel-20231105.0.189722
+FROM archlinux:base-devel-20240101.0.204074
 
-RUN echo 'Server=https://archive.archlinux.org/repos/2023/12/04/$repo/os/$arch' \
+RUN echo 'Server=https://archive.archlinux.org/repos/2024/01/01/$repo/os/$arch' \
   > /etc/pacman.d/mirrorlist
 
-RUN pacman --noconfirm -Syu &&\
+RUN pacman --noconfirm -Sy &&\
   pacman --noconfirm -Scc
