--- a/archlinux-colin/Dockerfile
+++ b/archlinux-colin/Dockerfile
@@ -1,7 +1,4 @@
 FROM archlinux:base-devel-20240101.0.204074
 
-RUN echo 'Server=https://archive.archlinux.org/repos/2024/01/01/$repo/os/$arch' \
-  > /etc/pacman.d/mirrorlist
-
-RUN pacman --noconfirm -Sy &&\
+RUN pacman --noconfirm -Syu &&\
   pacman --noconfirm -Scc
