Switch to archlinux/archlinux
Official archlinux image is no longer being updated

--- a/archlinux-colin/Dockerfile
+++ b/archlinux-colin/Dockerfile
@@ -1,4 +1,7 @@
-FROM archlinux:base-devel-20240101.0.204074
+FROM archlinux/archlinux:base-devel-20240427.0.231975
 
-RUN pacman --noconfirm -Syu &&\
+RUN echo 'Server=https://archive.archlinux.org/repos/2024/04/27/$repo/os/$arch' \
+  > /etc/pacman.d/mirrorlist
+
+RUN pacman --noconfirm -Sy &&\
   pacman --noconfirm -Scc
