intellij: Update and plugin fix

--- a/intellij/Dockerfile
+++ b/intellij/Dockerfile
@@ -10,8 +10,8 @@ RUN pacman -S --noconfirm --needed \
     ttf-dejavu \
   && pacman -Scc --noconfirm
 
-ARG INTELLIJ_TAR=ideaIC-2024.1.1.tar.gz
-ARG INTELLIJ_HASH=4d4221630c4d1dcb9f198370f82d9364014a4a624684ad8b3958be9f01eb656a
+ARG INTELLIJ_TAR=ideaIC-2024.1.4.tar.gz
+ARG INTELLIJ_HASH=7d5e4cdb5a7cb1c376ca66957481350571561edadc3f45e6fce422e14af0fc16
 WORKDIR /opt
 COPY $INTELLIJ_TAR idea.tar.gz
 RUN echo "$INTELLIJ_HASH  idea.tar.gz" \
@@ -25,7 +25,6 @@ WORKDIR /home/dev
 RUN mkdir -p .config/openbox
 COPY openbox .config/openbox
 
-RUN mkdir -p .cache/JetBrains
-RUN mkdir -p .config/JetBrains
+RUN mkdir -p .{cache,config,local/share}/JetBrains
 
 WORKDIR project
