--- a/archlinux-colin/Dockerfile
+++ b/archlinux-colin/Dockerfile
@@ -1,6 +1,6 @@
-FROM archlinux/archlinux:base-devel-20240627.0.243529
+FROM archlinux:base-devel-20240728.0.249973
 
-RUN echo 'Server=https://archive.archlinux.org/repos/2024/07/01/$repo/os/$arch' \
+RUN echo 'Server=https://archive.archlinux.org/repos/2024/07/31/$repo/os/$arch' \
   > /etc/pacman.d/mirrorlist
 
 RUN pacman --noconfirm -Syu &&\
