Archlinux, Deno plugin, Node 22 LTS updates

--- a/node-dev/Dockerfile
+++ b/node-dev/Dockerfile
@@ -3,7 +3,7 @@ FROM code-server:latest
 USER root
 WORKDIR /
 RUN pacman -S --noconfirm --needed \
-    nodejs-lts-iron \
+    nodejs-lts-jod \
     npm \
     prettier \
   && pacman -Scc --noconfirm
