--- a/archlinux-colin/Dockerfile
+++ b/archlinux-colin/Dockerfile
@@ -1,7 +1,7 @@
-FROM archlinux:base-devel-20250126.0.301347
+FROM archlinux:base-devel-20250302.0.316047
 
-RUN echo 'Server=https://archive.archlinux.org/repos/2025/02/01/$repo/os/$arch' \
+RUN echo 'Server=https://archive.archlinux.org/repos/2025/03/02/$repo/os/$arch' \
   > /etc/pacman.d/mirrorlist
 
-RUN pacman --noconfirm -Syu &&\
+RUN pacman --noconfirm -Sy &&\
   pacman --noconfirm -Scc
